01-Networking/lab004-nsg-rules/exports/hub-nsg-full.json
{
  "defaultSecurityRules": [
    {
      "access": "Allow",
      "description": "Allow inbound traffic from all VMs in VNET",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"4ed3b52d-18d2-4e05-b0fa-1681eb98ebc7\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-hub/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-central/defaultSecurityRules/AllowVnetInBound",
      "name": "AllowVnetInBound",
      "priority": 65000,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-hub",
      "sourceAddressPrefix": "VirtualNetwork",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow inbound traffic from azure load balancer",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"4ed3b52d-18d2-4e05-b0fa-1681eb98ebc7\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-hub/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-central/defaultSecurityRules/AllowAzureLoadBalancerInBound",
      "name": "AllowAzureLoadBalancerInBound",
      "priority": 65001,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-hub",
      "sourceAddressPrefix": "AzureLoadBalancer",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Deny",
      "description": "Deny all inbound traffic",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"4ed3b52d-18d2-4e05-b0fa-1681eb98ebc7\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-hub/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-central/defaultSecurityRules/DenyAllInBound",
      "name": "DenyAllInBound",
      "priority": 65500,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-hub",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow outbound traffic from all VMs to all VMs in VNET",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"4ed3b52d-18d2-4e05-b0fa-1681eb98ebc7\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-hub/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-central/defaultSecurityRules/AllowVnetOutBound",
      "name": "AllowVnetOutBound",
      "priority": 65000,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-hub",
      "sourceAddressPrefix": "VirtualNetwork",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow outbound traffic from all VMs to Internet",
      "destinationAddressPrefix": "Internet",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"4ed3b52d-18d2-4e05-b0fa-1681eb98ebc7\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-hub/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-central/defaultSecurityRules/AllowInternetOutBound",
      "name": "AllowInternetOutBound",
      "priority": 65001,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-hub",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Deny",
      "description": "Deny all outbound traffic",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"4ed3b52d-18d2-4e05-b0fa-1681eb98ebc7\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-hub/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-central/defaultSecurityRules/DenyAllOutBound",
      "name": "DenyAllOutBound",
      "priority": 65500,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-hub",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    }
  ],
  "etag": "W/\"4ed3b52d-18d2-4e05-b0fa-1681eb98ebc7\"",
  "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-hub/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-central",
  "location": "canadacentral",
  "name": "nsg-hub-central",
  "provisioningState": "Succeeded",
  "resourceGroup": "rg-learning-hub",
  "resourceGuid": "2a6dd981-d775-4e2f-a844-d94eba58a457",
  "securityRules": [
    {
      "access": "Allow",
      "destinationAddressPrefix": "Internet",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "443",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"4ed3b52d-18d2-4e05-b0fa-1681eb98ebc7\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-hub/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-central/securityRules/Allow-HTTPS-Outbound",
      "name": "Allow-HTTPS-Outbound",
      "priority": 100,
      "protocol": "Tcp",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-hub",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Deny",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"4ed3b52d-18d2-4e05-b0fa-1681eb98ebc7\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-hub/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-central/securityRules/Deny-All-Inbound-Internet",
      "name": "Deny-All-Inbound-Internet",
      "priority": 100,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-hub",
      "sourceAddressPrefix": "Internet",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    }
  ],
  "tags": {
    "BCHOCostCenter": "CC-0001",
    "Classification": "Internal",
    "Environment": "Dev",
    "OwnerBCHO": "Platform-Team",
    "ServiceOwner": "admin@example.com",
    "SolutionName": "AZ104-NSG-Lab"
  },
  "type": "Microsoft.Network/networkSecurityGroups"
}
