01-Networking/lab004-nsg-rules/exports/spoke2-app-nsg-full.json
{
  "defaultSecurityRules": [
    {
      "access": "Allow",
      "description": "Allow inbound traffic from all VMs in VNET",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"49699a4d-8187-4d29-bb9f-a8a3be174e3b\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-app/defaultSecurityRules/AllowVnetInBound",
      "name": "AllowVnetInBound",
      "priority": 65000,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "VirtualNetwork",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow inbound traffic from azure load balancer",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"49699a4d-8187-4d29-bb9f-a8a3be174e3b\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-app/defaultSecurityRules/AllowAzureLoadBalancerInBound",
      "name": "AllowAzureLoadBalancerInBound",
      "priority": 65001,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "AzureLoadBalancer",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Deny",
      "description": "Deny all inbound traffic",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"49699a4d-8187-4d29-bb9f-a8a3be174e3b\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-app/defaultSecurityRules/DenyAllInBound",
      "name": "DenyAllInBound",
      "priority": 65500,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow outbound traffic from all VMs to all VMs in VNET",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"49699a4d-8187-4d29-bb9f-a8a3be174e3b\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-app/defaultSecurityRules/AllowVnetOutBound",
      "name": "AllowVnetOutBound",
      "priority": 65000,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "VirtualNetwork",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow outbound traffic from all VMs to Internet",
      "destinationAddressPrefix": "Internet",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"49699a4d-8187-4d29-bb9f-a8a3be174e3b\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-app/defaultSecurityRules/AllowInternetOutBound",
      "name": "AllowInternetOutBound",
      "priority": 65001,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Deny",
      "description": "Deny all outbound traffic",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"49699a4d-8187-4d29-bb9f-a8a3be174e3b\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-app/defaultSecurityRules/DenyAllOutBound",
      "name": "DenyAllOutBound",
      "priority": 65500,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    }
  ],
  "etag": "W/\"49699a4d-8187-4d29-bb9f-a8a3be174e3b\"",
  "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-app",
  "location": "canadacentral",
  "name": "nsg-spoke2-app",
  "provisioningState": "Succeeded",
  "resourceGroup": "rg-learning-spoke2",
  "resourceGuid": "59202592-9710-4a8a-a6c4-e33afa348f0d",
  "securityRules": [
    {
      "access": "Allow",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "443",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"49699a4d-8187-4d29-bb9f-a8a3be174e3b\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-app/securityRules/Allow-HTTPS-Inbound",
      "name": "Allow-HTTPS-Inbound",
      "priority": 100,
      "protocol": "Tcp",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "Internet",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "22",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"49699a4d-8187-4d29-bb9f-a8a3be174e3b\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-app/securityRules/Allow-SSH-From-Hub",
      "name": "Allow-SSH-From-Hub",
      "priority": 110,
      "protocol": "Tcp",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "10.0.0.0/24",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "destinationAddressPrefix": "10.2.1.0/24",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "1433",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"49699a4d-8187-4d29-bb9f-a8a3be174e3b\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-app/securityRules/Allow-SQL-To-DB-Subnet",
      "name": "Allow-SQL-To-DB-Subnet",
      "priority": 100,
      "protocol": "Tcp",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    }
  ],
  "tags": {
    "BCHOCostCenter": "CC-0001",
    "Classification": "Internal",
    "Environment": "Dev",
    "OwnerBCHO": "Platform-Team",
    "ServiceOwner": "admin@example.com",
    "SolutionName": "AZ104-NSG-Lab"
  },
  "type": "Microsoft.Network/networkSecurityGroups"
}
