01-Networking/lab004-nsg-rules/exports/spoke2-db-nsg-full.json
{
  "defaultSecurityRules": [
    {
      "access": "Allow",
      "description": "Allow inbound traffic from all VMs in VNET",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"c028c60a-bf68-4db9-b972-027e9f6cf357\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-db/defaultSecurityRules/AllowVnetInBound",
      "name": "AllowVnetInBound",
      "priority": 65000,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "VirtualNetwork",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow inbound traffic from azure load balancer",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"c028c60a-bf68-4db9-b972-027e9f6cf357\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-db/defaultSecurityRules/AllowAzureLoadBalancerInBound",
      "name": "AllowAzureLoadBalancerInBound",
      "priority": 65001,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "AzureLoadBalancer",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Deny",
      "description": "Deny all inbound traffic",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"c028c60a-bf68-4db9-b972-027e9f6cf357\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-db/defaultSecurityRules/DenyAllInBound",
      "name": "DenyAllInBound",
      "priority": 65500,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow outbound traffic from all VMs to all VMs in VNET",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"c028c60a-bf68-4db9-b972-027e9f6cf357\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-db/defaultSecurityRules/AllowVnetOutBound",
      "name": "AllowVnetOutBound",
      "priority": 65000,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "VirtualNetwork",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow outbound traffic from all VMs to Internet",
      "destinationAddressPrefix": "Internet",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"c028c60a-bf68-4db9-b972-027e9f6cf357\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-db/defaultSecurityRules/AllowInternetOutBound",
      "name": "AllowInternetOutBound",
      "priority": 65001,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Deny",
      "description": "Deny all outbound traffic",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"c028c60a-bf68-4db9-b972-027e9f6cf357\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-db/defaultSecurityRules/DenyAllOutBound",
      "name": "DenyAllOutBound",
      "priority": 65500,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    }
  ],
  "etag": "W/\"c028c60a-bf68-4db9-b972-027e9f6cf357\"",
  "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-db",
  "location": "canadacentral",
  "name": "nsg-spoke2-db",
  "provisioningState": "Succeeded",
  "resourceGroup": "rg-learning-spoke2",
  "resourceGuid": "c4c9f188-d0af-472f-b06e-de1277f6609b",
  "securityRules": [
    {
      "access": "Allow",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "1433",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"c028c60a-bf68-4db9-b972-027e9f6cf357\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-db/securityRules/Allow-SQL-From-App-Subnet",
      "name": "Allow-SQL-From-App-Subnet",
      "priority": 100,
      "protocol": "Tcp",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "10.2.0.0/24",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "22",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"c028c60a-bf68-4db9-b972-027e9f6cf357\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-db/securityRules/Allow-SSH-From-Hub",
      "name": "Allow-SSH-From-Hub",
      "priority": 110,
      "protocol": "Tcp",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "10.0.0.0/24",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Deny",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"c028c60a-bf68-4db9-b972-027e9f6cf357\"",
      "id": "/subscriptions/<SUBSCRIPTION_ID>/resourceGroups/rg-learning-spoke2/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke2-db/securityRules/Deny-All-Other-Inbound",
      "name": "Deny-All-Other-Inbound",
      "priority": 4000,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-learning-spoke2",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    }
  ],
  "tags": {
    "BCHOCostCenter": "CC-0001",
    "Classification": "Internal",
    "Environment": "Dev",
    "OwnerBCHO": "Platform-Team",
    "ServiceOwner": "admin@example.com",
    "SolutionName": "AZ104-NSG-Lab"
  },
  "type": "Microsoft.Network/networkSecurityGroups"
}
